name: smith-client
version: 0.0.1
synopsis: API client for <https://smith.st/ Smith>.
homepage: https://github.com/smith-security/smith-client
license:  BSD3
license-file: LICENSE
author: Mark Hibberd
maintainer: mth@smith.st
copyright: (c) 2018, HotelKilo
bug-reports: https://github.com/smith-security/smith-client/issues
category: Security
build-type: Simple
extra-source-files: ChangeLog.md, README.md
cabal-version: >= 1.10
description:
  This is an API client library for interacting with <https://smith.st Smith>.

library
  default-language: Haskell2010
  build-depends:
      aeson >= 1.0 && < 1.5
    , base >= 4.10 && < 5
    , http-client >= 0.5 && < 0.6
    , http-client-tls >= 0.2 && < 0.4
    , http-types == 0.*
    , jose == 0.7.*
    , oauth2-jwt-bearer == 0.0.*

  hs-source-dirs:
    src

  exposed-modules:
    Smith.Client.Api

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 4.10 && < 5
    , hedgehog == 0.6.*
    , smith-client

  other-modules:
    Test.Smith.Client.Api
